fix: color contrast

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+  --bg-color: #ffffff;
+  --text-color: #424242;
+  --heading-color: #6f6f6f;
+  --scrollbar-thumb-color: #e7e7e7;
+}
+
 @font-face {
   font-family: "Inter";
   font-style: normal;
@@ -12,14 +19,8 @@
   box-sizing: border-box;
   font-size: 1.6rem;
   font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-:root {
-  --bg-color: #ffffff;
-  --text-color: #2e3135;
-  --heading-color: #868990;
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb-color) transparent;
 }
 
 html {
@@ -38,9 +39,14 @@ body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: var(--text-color);
+}
+
+html,
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  touch-action: manipulation;
 }
 
 .header {
@@ -124,24 +130,6 @@ body {
   color: var(--text-color);
 }
 
-/* Custom Scroll Bar*/
-::-webkit-scrollbar {
-  width: 7px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #c4c2c1;
-  border-radius: 20px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #5a5a5a;
-}
-
 @media (max-width: 56.25em) {
   body {
     padding: 2rem;
@@ -156,7 +144,9 @@ body {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg-color: #111113;
+    --bg-color: #18181a;
     --text-color: #ffffff;
+    --heading-color: #a0a0a0;
+    --scrollbar-thumb-color: #2e2e2e;
   }
 }
